[package]
name = "framed"
version = "0.1.0"
description = "Send and receive frames (arrays of bytes of varied size) over streams of bytes."
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
categories = ["embedded", "encoding", "network-programming"]
keywords = ["no_std", "networking", "datalink", "protocol", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluffysquirrels/framed"

[dependencies]
cobs = "^0.1.2"
error-chain = "^0.11.0"
ref_slice = "^1.1.1"

[dependencies.core-io]
git = "https://github.com/QuiltOS/core-io"
rev = "f084f913011c9916d420b520ead3953a2ccb950e"

[features]
default = ["use_std"]

# Enable to print all data to stdout for testing.
trace = []

# Use standard library, enabled by default; disable for no_std.
use_std = []