[package]
name = "framed"
version = "0.1.3"
description = "Send and receive slices of bytes over lossy streams of bytes."
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
categories = ["no-std", "embedded", "encoding", "network-programming"]
keywords = ["no_std", "networking", "datalink", "protocol", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluffysquirrels/framed-rs"

[badges.travis-ci]
repository = "fluffysquirrels/framed-rs"
branch = "master"

[dependencies]
cobs = "^0.1.3"
ref_slice = "^1.1.1"

[features]
default = ["use_std"]

# Enable to print all data to stdout for testing.
trace = []

# Use standard library. Enabled by default, disable for no_std.
use_std = []
