[package]
name = "framed"
version = "0.2.0"
description = "Send and receive data over lossy streams of bytes."
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
categories = ["no-std", "embedded", "encoding", "network-programming"]
keywords = ["no_std", "networking", "datalink", "protocol", "embedded"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluffysquirrels/framed-rs"

[badges.travis-ci]
repository = "fluffysquirrels/framed-rs"
branch = "master"

[dependencies]
cobs = "^0.1.3"
ref_slice = "^1.1.1"
serde = "^1.0"
ssmarshal = "^1.0"

[dev-dependencies]
serde_derive = "^1.0"

[features]
default = ["use_std"]

# Enable to print all data to stdout for testing.
trace = []

# Use standard library. Enabled by default, disable for no_std.
use_std = []

# Enables unstable features that only work on nightly rust.
# Required for practical no_std use.
use_nightly = []
