[package]
name = "framed_test_type"
version = "0.1.0"
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
description = "Send and receive data over lossy streams of bytes."
categories = ["no-std", "embedded", "encoding", "network-programming"]
keywords = ["no_std", "networking", "datalink", "protocol", "embedded"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluffysquirrels/framed-rs"

[badges.travis-ci]
repository = "fluffysquirrels/framed-rs"
branch = "master"

[dependencies]
framed = { path = "../framed" }
serde = "^1.0"
serde_derive = "^1.0"

[[bin]]
name = "framed_test_type"
doc = false